--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
     "xml-loader": "^1.2.1"
-  }
+  },
+  "browserslist": [
+    "cover 99.5%"
+  ]
 }
