--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lanotsky",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.8.0",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.0",
+    "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
@@ -42,5 +43,9 @@
   },
   "browserslist": [
     "cover 99.5%"
-  ]
+  ],
+  "dependencies": {
+    "react-router": "^4.3.1",
+    "styled-components": "^3.4.10"
+  }
 }
