--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
+    "uuid": "^3.3.2",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
@@ -47,7 +48,9 @@
     "cover 99.5%"
   ],
   "dependencies": {
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
+    "redux": "^4.0.1",
     "styled-components": "^3.4.10"
   }
 }
